The Cycles viewport stats has poor spacing alongside the new general viewport stats #76281

Closed
opened 2020-05-01 01:56:59 +02:00 by Jesse Yurkovich · 4 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: AMD FirePro W2100 ATI Technologies Inc. 4.5.13560 Core Profile Context FireGL 26.20.11024.6001

Blender Version
Broken: version: 2.90 (sub 0), branch: master, commit date: 2020-04-30 22:03, hash: 4d790516fb
Worked: n/a

Short description of error
Cycles, in viewport rendered mode, outputs the current sample count while rendering along with a final string once complete. This fits poorly with the new viewport stats location (in terms of spacing and layout)

Observe the "Rendering Done" string with poor placement very close to the other stats:
text_placement.png

Exact steps for others to reproduce the error

  • Enable the new viewport statistics Overlay
  • Switch to Cycles render engine
  • Switch to Rendered mode in the viewport
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: AMD FirePro W2100 ATI Technologies Inc. 4.5.13560 Core Profile Context FireGL 26.20.11024.6001 **Blender Version** Broken: version: 2.90 (sub 0), branch: master, commit date: 2020-04-30 22:03, hash: `4d790516fb` Worked: n/a **Short description of error** Cycles, in viewport rendered mode, outputs the current sample count while rendering along with a final string once complete. This fits poorly with the new viewport stats location (in terms of spacing and layout) Observe the "Rendering Done" string with poor placement very close to the other stats: ![text_placement.png](https://archive.blender.org/developer/F8504217/text_placement.png) **Exact steps for others to reproduce the error** - Enable the new viewport statistics Overlay - Switch to Cycles render engine - Switch to Rendered mode in the viewport
Author
Member

Added subscriber: @deadpin

Added subscriber: @deadpin
Harley Acheson self-assigned this 2020-05-01 02:35:05 +02:00
Member

A probable fix is here: https://developer.blender.org/D7586

A probable fix is here: https://developer.blender.org/D7586

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76281
No description provided.